.snakemake/log/2022-08-23T104022.363852.snakemake.log
Full Traceback (most recent call last):
  File "/opt/miniconda3/envs/snakemake/lib/python3.9/site-packages/snakemake/__init__.py", line 591, in snakemake
    workflow.include(
  File "/opt/miniconda3/envs/snakemake/lib/python3.9/site-packages/snakemake/workflow.py", line 1173, in include
    exec(compile(code, snakefile, "exec"), self.globals)
  File "/home/jeszyman/repos/cfdna-cna/workflow/int_test.smk", line 34, in <module>
  File "/opt/miniconda3/envs/snakemake/lib/python3.9/site-packages/snakemake/workflow.py", line 1173, in include
    exec(compile(code, snakefile, "exec"), self.globals)
  File "/home/jeszyman/repos/cfdna-cna/workflow/cfdna_wgs_cna.smk", line 99
    				out_dir = ichor
    				^
SyntaxError: invalid syntax

SyntaxError in line 49 of /home/jeszyman/repos/cfdna-cna/workflow/cfdna_wgs_cna.smk:
invalid syntax
  File "/home/jeszyman/repos/cfdna-cna/workflow/int_test.smk", line 28, in <module>
